# xlsx-to-any

./: LICENSE  README.md  pyproject.toml  requirements.txt  script.py  setup.py
xlsx_to_any/: xlsx_to_any.py
